@@ -474,7 +474,7 @@ public class TestVectorizationContext {
     greaterExprDesc.setChildren(children1);
 
     ExprNodeColumnDesc col2Expr = new ExprNodeColumnDesc(Float.class, "col2", "table", false);
-    ExprNodeConstantDesc const2Desc = new ExprNodeConstantDesc(new Float(1.0));
+    ExprNodeConstantDesc const2Desc = new ExprNodeConstantDesc(Float.valueOf(1.0f));
 
     GenericUDFOPLessThan udf2 = new GenericUDFOPLessThan();
     ExprNodeGenericFuncDesc lessExprDesc = new ExprNodeGenericFuncDesc();
@@ -535,7 +535,7 @@ public class TestVectorizationContext {
     greaterExprDesc.setChildren(children1);
 
     ExprNodeColumnDesc col2Expr = new ExprNodeColumnDesc(Float.class, "col2", "table", false);
-    ExprNodeConstantDesc const2Desc = new ExprNodeConstantDesc(new Float(1.0));
+    ExprNodeConstantDesc const2Desc = new ExprNodeConstantDesc(Float.valueOf(1.0f));
 
     GenericUDFOPLessThan udf2 = new GenericUDFOPLessThan();
     ExprNodeGenericFuncDesc lessExprDesc = new ExprNodeGenericFuncDesc();
@@ -1114,7 +1114,7 @@ public class TestVectorizationContext {
     // string BETWEEN
     GenericUDFBetween udf = new GenericUDFBetween();
     List<ExprNodeDesc> children1 = new ArrayList<ExprNodeDesc>();
-    children1.add(new ExprNodeConstantDesc(new Boolean(false))); // no NOT keyword
+    children1.add(new ExprNodeConstantDesc(Boolean.FALSE)); // no NOT keyword
     children1.add(col1Expr);
     children1.add(constDesc);
     children1.add(constDesc2);
@@ -1131,7 +1131,7 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterStringColumnBetween);
 
     // string NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(true))); // has NOT keyword
+    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE)); // has NOT keyword
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterStringColumnNotBetween);
 
@@ -1144,7 +1144,7 @@ public class TestVectorizationContext {
     // CHAR BETWEEN
     udf = new GenericUDFBetween();
     children1 = new ArrayList<ExprNodeDesc>();
-    children1.add(new ExprNodeConstantDesc(new Boolean(false))); // no NOT keyword
+    children1.add(new ExprNodeConstantDesc(Boolean.FALSE)); // no NOT keyword
     children1.add(col1Expr);
     children1.add(constDesc);
     children1.add(constDesc2);
@@ -1156,7 +1156,7 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterCharColumnBetween);
 
     // CHAR NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(true))); // has NOT keyword
+    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE)); // has NOT keyword
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterCharColumnNotBetween);
 
@@ -1169,7 +1169,7 @@ public class TestVectorizationContext {
     // VARCHAR BETWEEN
     udf = new GenericUDFBetween();
     children1 = new ArrayList<ExprNodeDesc>();
-    children1.add(new ExprNodeConstantDesc(new Boolean(false))); // no NOT keyword
+    children1.add(new ExprNodeConstantDesc(Boolean.FALSE)); // no NOT keyword
     children1.add(col1Expr);
     children1.add(constDesc);
     children1.add(constDesc2);
@@ -1181,12 +1181,12 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterVarCharColumnBetween);
 
     // VARCHAR NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(true))); // has NOT keyword
+    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE)); // has NOT keyword
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterVarCharColumnNotBetween);
 
     // long BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(false)));
+    children1.set(0, new ExprNodeConstantDesc(Boolean.FALSE));
     children1.set(1, new ExprNodeColumnDesc(Long.class, "col1", "table", false));
     children1.set(2, new ExprNodeConstantDesc(10));
     children1.set(3, new ExprNodeConstantDesc(20));
@@ -1194,12 +1194,12 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterLongColumnBetween);
 
     // long NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(true)));
+    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE));
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterLongColumnNotBetween);
 
     // double BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(false)));
+    children1.set(0, new ExprNodeConstantDesc(Boolean.FALSE));
     children1.set(1, new ExprNodeColumnDesc(Double.class, "col1", "table", false));
     children1.set(2, new ExprNodeConstantDesc(10.0d));
     children1.set(3, new ExprNodeConstantDesc(20.0d));
@@ -1207,12 +1207,12 @@ public class TestVectorizationContext {
     assertTrue(ve instanceof FilterDoubleColumnBetween);
 
     // double NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(true)));
+    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE));
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertTrue(ve instanceof FilterDoubleColumnNotBetween);
 
     // timestamp BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(false)));
+    children1.set(0, new ExprNodeConstantDesc(Boolean.FALSE));
     children1.set(1, new ExprNodeColumnDesc(Timestamp.class, "col1", "table", false));
     children1.set(2, new ExprNodeConstantDesc("2013-11-05 00:00:00.000"));
     children1.set(3, new ExprNodeConstantDesc("2013-11-06 00:00:00.000"));
@@ -1220,7 +1220,7 @@ public class TestVectorizationContext {
     assertEquals(FilterTimestampColumnBetween.class, ve.getClass());
 
     // timestamp NOT BETWEEN
-    children1.set(0, new ExprNodeConstantDesc(new Boolean(true)));
+    children1.set(0, new ExprNodeConstantDesc(Boolean.TRUE));
     ve = vc.getVectorExpression(exprDesc, VectorExpressionDescriptor.Mode.FILTER);
     assertEquals(FilterTimestampColumnNotBetween.class, ve.getClass());
   }
